# sdl-game

./: CMakeLists.txt  Makefile  README.md  things.txt
res/textures/: random_tex.ase
src/: Application.cpp  Character.cpp  Character.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Input.h  Texture.cpp  Texture.h  TexturedRectangle.cpp  TexturedRectangle.h  Window.cpp  Window.h  World.cpp  World.h
src/utils/: Log.h
